--- a/client/online-shop/package.json
+++ b/client/online-shop/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^0.0.0-insiders.08baf09",
     "@heroicons/react": "^2.1.1",
     "headlessui": "^0.0.0",
     "react": "^18.2.0",
