--- a/server/online-shop/online-shop.csproj
+++ b/server/online-shop/online-shop.csproj
@@ -7,4 +7,9 @@
     <RootNamespace>online_shop</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.2" />
+  </ItemGroup>
+
 </Project>
