change slider and add adaptive footer

--- a/client/online-shop/package.json
+++ b/client/online-shop/package.json
@@ -15,7 +15,8 @@
     "headlessui": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
