--- a/client/online-shop/package.json
+++ b/client/online-shop/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^0.0.0-insiders.08baf09",
     "@heroicons/react": "^2.1.1",
+    "class-variance-authority": "^0.7.0",
     "headlessui": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
