--- a/client/online-shop/package.json
+++ b/client/online-shop/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
+    "react-toastify": "^10.0.4",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
